--- a/source/stylesheets/modules/_hammer.scss
+++ b/source/stylesheets/modules/_hammer.scss
@@ -1,19 +1,23 @@
 .hammer {
   overflow: hidden;
+  width: 100%;
 }
 
-.hammer__image--header {
+.hammer__image {
   position: relative;
   left: 60%;
   width: 100%;
-  max-width: 50vw;
+  max-width: 25vw;
 
-  transform: rotate(45deg);
   @media (min-width: $breakpoint-lg){
-    left: 40%;
+    left: 70%;
   }
 }
 
-.hammer--about {
+.hammer__image--header {
+  transform: rotate(45deg);
+}
+
+.hammer__image--about {
   
 }
