--- a/source/stylesheets/modules/_nav.scss
+++ b/source/stylesheets/modules/_nav.scss
@@ -5,15 +5,19 @@
 
 .nav__link {
   display: inline-block;
-  margin-right: $gridUnit * 3;
-  padding: 0 $gridUnit * 3;
+  padding: 0 $gridUnit * 1;
+  margin: 0 $gridUnit * 2 $gridUnit * 1 0;
   
   background: $baseColor;
   
   font-family: $buttonFont;
-  font-size: $gridUnit * 1.5;
-  line-height: $gridUnit * 4;
+  font-size: $gridUnit * 1;
+  line-height: $gridUnit * 3;
   color: $inverseColor;
+
+  @media (min-width: $breakpoint-md){
+    padding: 0 $gridUnit * 3;
+  }
 }
 
 .nav__link--is-active {
