--- a/source/stylesheets/_helpers.scss
+++ b/source/stylesheets/_helpers.scss
@@ -3,3 +3,24 @@
     display: none;
   }  
 }
+
+.brand-primary {
+  background: $yellow;
+}
+
+.brand-secundary {
+  background: $blue;
+}
+
+.brand-tertiary {
+  background: $red;
+}
+
+.brand-base {
+  background: $baseColor;
+  color: $white;
+}
+
+.brand-baselight {
+  background: $lightBaseColor;
+}
