--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,23 +1,21 @@
-    <footer class="footer">
-      <div class="footer__description">
-        <div class="footer__logo-container">
+    <footer class="layout__item layout__item--footer brand-base">
+      <div class="layout__item-grid-content">
+        <div class="textbox">
           <h1 class="textbar textbar--inverse">Coding_</h1><br>
           <h1 class="textbar textbar--inverse">the_</h1><br>
           <h1 class="textbar textbar--inverse">Humanities</h1>
+          <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
+          <h3>Contact: </h3>
+          <p><a href="mailto:yeehaa@codingthehumanities.com">Email: Jan Hein Hoogstad</a></p>
+          <img class="fullwidth-image" src="images/uva-logo.svg" alt="">
         </div>
-        <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
-        <h3>Contact: </h3>
-        <p><a href="mailto:yeehaa@codingthehumanities.com">Email: Jan Hein Hoogstad</a></p>
       </div>
-      <div class="footer__nav">
-        <div class="footer__nav-btn-container">
-          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse footer__textbar-projects">Projects</a>
-          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse footer__textbar-publications">Publications</a>
+      <div class="layout__item-offgrid-content">
+        <div class="textbox textbox--align-right">
+          <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse footer__textbar-projects">Projects</a><br>
+          <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse footer__textbar-publications">Publications</a><br>
           <a href="<%= config.http_prefix + '#' %>" class="textbar textbar--inverse footer__textbar-process">Process</a>
         </div>
-      </div>
-      <div class="footer__uva-container">
-        <img class="footer__uva-logo" src="images/uva-logo.svg" alt="">
       </div>
     </footer>
   </body>
