--- a/source/stylesheets/modules/_partner.scss
+++ b/source/stylesheets/modules/_partner.scss
@@ -5,7 +5,7 @@
   margin: 0 $gridUnit * 3 $gridUnit * 3 0;
   padding: $gridUnit * 1;
 
-  background: rgba($yellow, 1);
+  background: $yellow;
   @media (min-width: $breakpoint-sm){
     width: calc((1/3 * 100%) - (#{$gridUnit} * 3));
   }
