--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,7 @@ layout: main
       <%= blog('blocks').articles[0].body %>
     </div>
   </div>
-  <div class="layout__item-offgrid-content">
+  <div class="layout__item-offgrid-content layout__item-offgrid-content--align-top">
     <div class="hammer">
       <img class="hammer__image hammer__image--header" src="./images/hammer-short.svg" alt="">
     </div>
