--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -5,8 +5,7 @@
           <h1 class="textbar textbar--inverse">the_</h1><br>
           <h1 class="textbar textbar--inverse">Humanities</h1>
           <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
-          <h3>Contact: </h3>
-          <p><a href="mailto:yeehaa@codingthehumanities.com">Email: Jan Hein Hoogstad</a></p>
+          <p>Contact: <a class="textbox__link" href="mailto:yeehaa@codingthehumanities.com">Jan Hein Hoogstad</a></p>
           <img class="fullwidth-image" src="images/uva-logo.svg" alt="">
         </div>
       </div>
