--- a/source/stylesheets/modules/_nav.scss
+++ b/source/stylesheets/modules/_nav.scss
@@ -18,6 +18,11 @@
   @media (min-width: $breakpoint-md){
     padding: 0 $gridUnit * 3;
   }
+  @media (min-width: $breakpoint-xxl){
+    margin: 0 $gridUnit * 3 $gridUnit * 3 0;
+    font-size: $gridUnit * 2;
+    line-height: $gridUnit * 6;
+  }
 }
 
 .nav__link--is-active {
