--- a/source/stylesheets/_mediaqueries.scss
+++ b/source/stylesheets/_mediaqueries.scss
@@ -3,6 +3,7 @@ $breakpoint-sm : 600px;
 $breakpoint-md : 800px;
 $breakpoint-lg : 1000px;
 $breakpoint-xl : 1200px;
+$breakpoint-xxl : 1600px;
 
 @media (min-width: $breakpoint-xs){
   html {
@@ -30,6 +31,12 @@ $breakpoint-xl : 1200px;
 
 @media (min-width: $breakpoint-xl){
   html {
-    font-size: 28px;
+    font-size: 26px;
+  }
+}
+
+@media (min-width: $breakpoint-xxl){
+  html {
+    font-size: 32px;
   }
 }
