--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,15 +1,15 @@
     <footer class="layout__item layout__item--footer brand-base">
       <div class="layout__item-grid-content">
-        <div class="textbox">
+        <summery class="textbox">
           <h1 class="textbar textbar--inverse">Coding_</h1><br>
           <h1 class="textbar textbar--inverse">the_</h1><br>
           <h1 class="textbar textbar--inverse">Humanities</h1>
           <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
           <p>Contact: <a class="textbox__link" href="mailto:yeehaa@codingthehumanities.com">Jan Hein Hoogstad</a></p>
           <img class="fullwidth-image" src="images/uva-logo.svg" alt="">
-        </div>
+        </summery>
       </div>
-      <div class="layout__item-offgrid-content">
+      <div class="layout__item-offgrid-content hidden-md">
         <div class="textbox textbox--align-right">
           <a href="<%= config.http_prefix + 'projects.html#' %>" class="textbar textbar--inverse footer__textbar-projects">Projects</a><br>
           <a href="<%= config.http_prefix + 'publications.html#' %>" class="textbar textbar--inverse footer__textbar-publications">Publications</a><br>
