--- a/source/partials/_reference.erb
+++ b/source/partials/_reference.erb
@@ -1,5 +1,5 @@
 <div class="reference" onclick="" class="reference <%= reference.data.type %>">
-  <h4 class="reference__header"><%= reference.data.title %></h4>
+  <h4 class="reference__title"><%= reference.data.title %></h4>
   <div onclick="" class="reference__description">
     <p class="reference__summery"><%= reference.data.summery %></p>
     <a class="reference__link" href="<%= config.http_prefix + reference.data.type + '.html#' + reference.slug %>">  >> </a>
