--- a/source/stylesheets/modules/_nav.scss
+++ b/source/stylesheets/modules/_nav.scss
@@ -1,6 +1,6 @@
 .nav {
   width: 100%;
-  padding: $gridUnit * 3 $gridUnit * 3 0 0;
+  padding: $gridUnit * 3 $gridUnit * 3 0 $gridUnit * 1;
 }
 
 .nav__link {
