--- a/source/stylesheets/modules/_hammer.scss
+++ b/source/stylesheets/modules/_hammer.scss
@@ -7,12 +7,13 @@
 .hammer__image {
   display: block;
   width: 80%;
+  max-width: 50vw;
   margin: 0 0 0 auto;
 }
 
 .hammer__image--header {
   position: relative;
-  left: 20%;
+  left: 15%;
   transform: rotate(45deg);
 }
 
