--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -19,7 +19,7 @@ $gridUnit: rem-calc(10);
 @import 'modules/textbar';
 @import 'modules/textbox';
 @import 'modules/hammer';
-@import 'modules/fullwidth-image';
+@import 'modules/image';
 @import 'modules/reference';
 @import 'modules/partner';
 @import 'modules/footer';
