optimise image styling

--- a/source/stylesheets/modules/_image.scss
+++ b/source/stylesheets/modules/_image.scss
@@ -4,7 +4,9 @@
 
 .image--fullwidth {
   width: 100%;
-  padding: $gridUnit * 9 0 0 0;
+  // should be on the nav and layout unit
+  padding: $gridUnit * 9 0 0 0;  
+  // should be on the nav and layout unit
 }
 
 .image--halfwidth {
@@ -13,7 +15,11 @@
 }
 
 .image--padding {
-  padding: $gridUnit * 9;
+  // should be on the nav and layout unit
+  padding: $gridUnit * 9 $gridUnit * 3 $gridUnit * 9 $gridUnit * 3;  
+  @media (min-width: $breakpoint-sm){
+    padding: $gridUnit * 9;
+  }
 }
 
 
