--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,6 +20,9 @@ type: story
   </div>
 </div>
 
+<div class="item item-video">
+</div>
+
 <% for item in 2..4 %>
 <a id="item-body-<%= item %>"></a>
 <%= partial("partials/navigation", :locals => { :which_is_link_active => item }) %>
