--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -16,6 +16,7 @@ $gridUnit: rem-calc(10);
 @import 'helpers';
 
 @import 'modules/nav';
+@import 'modules/button';
 @import 'modules/textbar';
 @import 'modules/textbox';
 @import 'modules/hammer';
