--- a/source/stylesheets/modules/_textbar.scss
+++ b/source/stylesheets/modules/_textbar.scss
@@ -36,6 +36,6 @@
 
 .textbar--fullwidth-small {
   width: 100%;
-  padding: 0 $gridUnit * 2 0 $gridUnit * 3;
+  padding: $gridUnit * 1 $gridUnit * 3;
 
 }
