projects are close to done

--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -6,7 +6,7 @@
           <h1 class="textbar textbar--inverse">Humanities</h1>
           <p>Coding the Humanities is a collective of teachers, students and researchers who build a set of teaching practices and tools that leverages existing knowledge and resources.</p>
           <p>Contact: <a class="textbox__link" href="mailto:yeehaa@codingthehumanities.com">Jan Hein Hoogstad</a></p>
-          <img class="image image--fullwidth" src="images/uva-logo.svg" alt="">
+          <img class="image image--fullwidth image--margin-top" src="images/uva-logo.svg" alt="">
         </summery>
       </div>
       <div class="layout__item-offgrid-content hidden-md">
