--- a/source/offcourse.html.erb
+++ b/source/offcourse.html.erb
@@ -1,24 +1,32 @@
 ---
 title: Coding the Humanities
 layout: main
-type: publications
+type: projects
 ---
-<div class="layout__item brand-secundary">
+<div class="layout__item brand-tertiary">
   <header class="layout__item-top">
     <%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
   </header>
-  <img class="image image--halfwidth image--padding" src="images/publications.svg" alt="">
+  <img class="image image--halfwidth image--padding" src="images/projects.svg" alt="">
 </div>
 
 <main class="layout__item">
   <div class="layout__item-grid-content">
     <h1 class="textbar textbar--fullwidth textbar--fullwidth--small">Projects</h1>
     <% for item in 2..4 %>
-    <% blog('publications').articles.each do |post| %>
+    <% blog('projects').articles.each do |post| %>
     <% if post.data.item == item %>
     <h1 id="<%= post.slug %>" class="textbar textbar--fullwidth-small"><%= post.title %></h1>
     <div class="textbox textbox--padding-bottom">
       <%= post.body %>
+      <% if post.data.studentProjects %>
+      <h3>Student Projects</h3>
+      <ul>
+        <% post.data.studentProjects.each do |project| %>
+        <li><a href="<%= project.url %>"> <%= project.title %></a></li>
+        <% end %>
+      </ul>
+      <% end %>
       <div>
         <a href="<%= config.http_prefix + '#' + 'item-body-' + item.to_s %>" class="btn btn--small"> &lt;&lt;&nbsp;Back </a>
         <!-- onclick is iphone hover hack -->
