--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -17,6 +17,7 @@ $gridUnit: rem-calc(10);
 
 @import 'modules/nav';
 @import 'modules/button';
+@import 'modules/masonry';
 @import 'modules/textbar';
 @import 'modules/textbox';
 @import 'modules/hammer';
