--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -17,5 +17,8 @@
         </div>
       </div>
     </footer>
+    <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
+    <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
+    <%= javascript_include_tag :all %>
   </body>
 </html>
