--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -30,9 +30,21 @@
     <meta name="theme-color" content="#ffffff">
     <!-- end favicons -->
 
+    <!-- inline SVG filter -->
+    <svg style="display: none" class="filter-for-images">
+      <filter id="yellow-filter" color-interpolation-filters="sRGB"
+              x="0" y="0" height="100%" width="100%">
+        <feColorMatrix type="matrix"
+          values="0.8980392156862745 0 0 0  0 
+                  0.8117647058823529 0 0 0  0  
+                  0.2235294117647059 0 0 0  0 
+                    0  0 0 1  0" />
+      </filter>
+    </svg>
+    <!-- end filter -->
+
     <title><%= current_page.data.title || "Coding the Humanities" %></title>
 
     <%= stylesheet_link_tag :main %>
-    <%= javascript_include_tag :all %>
   </head>
   <body class="layout__body">
