--- a/source/partials/_head.erb
+++ b/source/partials/_head.erb
@@ -40,6 +40,9 @@
                   0.2235294117647059 0 0 0  0 
                     0  0 0 1  0" />
       </filter>
+      <filter id="sharpen">
+        <feConvolveMatrix order="3 3" preserveAlpha="true" kernelMatrix="0 -1 0 -1 5 -1 0 -1 0"/>
+      </filter>
     </svg>
     <!-- end filter -->
 
